# architecture-patterns-with-python-fastapi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  migrations.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4de895edd40c_initial_migration.py
src/: bootstrap.py  config.py  entity.py  fast_api_app.py  fastapi_deps.py  model.py  orm.py  orm_classical_mapping.py  repository.py  services.py  value_object.py  views.py
src/adapters/: notifications.py  orm.py  redis_event_publisher.py  repository.py  session.py  unit_of_work_strategy.py
src/domain/: commands.py  entity.py  events.py  model.py  value_object.py
src/entrypoints/: fast_api_app.py  fastapi_app.py  redis_deps.py  redis_event_consumer.py
src/entrypoints/fastapi_app/: app.py  deps.py  schemas.py
src/service_layer/: handlers.py  messagebus.py  services.py  unit_of_work.py
tests/: conftest.py  random_refs.py  test_allocate.py  test_batches.py  test_domain.py  test_orm.py  test_repository.py  test_services.py
tests/e2e/: api_client.py  redis_client.py  test_api.py  test_external_events.py
tests/integration/: conftest.py  test_email.py  test_repository.py  test_unit_of_work.py  test_views.py
tests/unit/: test_allocate.py  test_batches.py  test_handlers.py  test_product.py  test_services.py
