[tool.poetry]
name = "architecture-patterns-with-python-fastapi"
version = "0.1.0"
description = ""
authors = ["joemoyes <71090896+moyes-joe@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
bandit = "^1.7.5"
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.3.0"
pytest = "^7.4.0"
pre-commit = "^3.3.3"

[tool.pytest.ini_options]
testpaths = ["./tests"]

[[tool.mypy.overrides]]
module = [
    "pydantic.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [".venv", "tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
