[tool.poetry]
name = "architecture-patterns-with-python-fastapi"
version = "0.1.0"
description = ""
authors = ["joemoyes <71090896+moyes-joe@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0"
sqlalchemy = "^2.0.17"
fastapi = "^0.100.0"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"
redis = "^4.6.0"
types-redis = "^4.6.0.3"
tenacity = "^8.2.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
bandit = "^1.7.5"
black = "^23.3.0"
pytest = "^7.4.0"
pre-commit = "^3.3.3"
httpx = "^0.24.1"
ruff = "^0.0.277"
uvicorn = "^0.22.0"
alembic = "^1.11.1"
types-redis = "^4.6.0.3"

[tool.pytest.ini_options]
testpaths = ["./tests"]

[[tool.mypy.overrides]]
module = [
    "pydantic.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [".venv", "tests"]

[tool.ruff]
line-length = 120
select = [
  "B",   # flake8 bugbear
  "I",   # isort
  "UP",  # pyupgrade
  "FA102", # future-required-type-annotation
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
